--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -9,6 +9,11 @@ body {
 a {
   color: inherit;
   text-decoration: none;
+  text-decoration: underline;
+
+  &:hover {
+    opacity: 0.5;
+  }
 }
 
 * {
